k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-app

  template:
    metadata:
      labels:
        app: student-app

    spec:
      containers:
      - name: student-app
        image: manoj1812/student-app:latest

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
