k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-app
spec:
  selector:
    app: student-app

  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
